# XercesCCMakeSupport

./: CMakeLists.txt  README.md  XercesCConfig.cmake  XercesCConfigVersion.cmake.in  XercesCLibraryDepends-mode.cmake.in  XercesCLibraryDepends.cmake
